hide refresh button when no scorecard, added hover color on live panel, plugin readme file & icon.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
 <idea-plugin>
     <id>com.github.gurjot1142.codecricket</id>
     <name>CodeCricket</name>
-    <vendor>gurjot-1142</vendor>
+    <vendor>guru1142</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
